5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1807_2565.log
== TEST (2019-06-06 17:23:06) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("horas: ")))
c=int(input("carga horaria: "))
cont=zeros(3, dtype=int)

for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		cont[0]=cont[0]+1
	elif(a[i]<5 and b[i]>=o.75*c):
		cont[1]=cont[1]+1
	else:
		cont[2]=cont[2]+1
print(cont)		

-- ERROR:
File "XXXX", line 10
    elif(a[i]<5 and b[i]>=o.75*c):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:23:24) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("horas: ")))
c=int(input("carga horaria: "))
cont=zeros(3, dtype=int)

for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		cont[0]=cont[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		cont[1]=cont[1]+1
	else:
		cont[2]=cont[2]+1
print(cont)		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:24:04) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("horas: ")))
c=int(input("carga horaria: "))
cont=zeros(3, dtype=int)

for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		cont[0]=cont[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		cont[1]=cont[1]+1
	else:
		cont[2]=cont[2]+1
print(cont)		

-- EXECUTION TIME:
0.943867
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:13:57) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75):
		d[0]=d[0]+1
	elif(a[i]>=5 and b[i]<0.75):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:15:55) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]>=5 and b[i]<0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:16:36) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]>=5 and b[i]<=0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- EXECUTION TIME:
0.962949
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 3 0]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 2 0]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 4 1]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:19:26) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]<=5 and b[i]<0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- EXECUTION TIME:
1.19308
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 0 5]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:19:58) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]<=5 and b[i]<0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:20:42) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]<=5 and b[i]<=0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- EXECUTION TIME:
0.842457
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 0 5]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:20:49) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]<=5 and b[i]<=0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- EXECUTION TIME:
0.997991
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
medias finais: presenca: caga horaria: [5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
medias finais: presenca: caga horaria: [5 0 5]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:21:03) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]<=5 and b[i]>=0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:21:15) 
-- CODE:
from numpy import*
a=array(eval(input("medias finais: ")))
b=array(eval(input("presenca: ")))
c=int(input("caga horaria: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	elif(a[i]<=5 and b[i]>=0.75*c):
		d[1]=d[1]+1
	else:
		d[2]=d[2]+1
print(d)		
-- EXECUTION TIME:
1.06944
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:44:11) 
-- CODE:
from numpy import*
a=array(eval(input("alunos aprovados: ")))
b=array(eval(input("reprovados nota: ")))
c=int(input("reprovados frequencia: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	if(a[i]<=5 and b[i]>=0.75*c):
		d[1]=d[1]+1
	if(a[i]>5 and b[i]<0.75*c):
		d[2]=d[2]+1
print(d)		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:44:55) 
-- CODE:
from numpy import*
a=array(eval(input("alunos aprovados: ")))
b=array(eval(input("reprovados nota: ")))
c=int(input("reprovados frequencia: "))
d=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>=0.75*c):
		d[0]=d[0]+1
	if(a[i]<=5 and b[i]>=0.75*c):
		d[1]=d[1]+1
	if(a[i]>5 and b[i]<0.75*c):
		d[2]=d[2]+1
print(d)		
	
		
-- EXECUTION TIME:
0.787303
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
